# ESP32-S3-WATCH-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README (copy 1).md  README.md  build.rs  docker-compose.yaml  flake.nix  partitions.csv  sdkconfig.esp32s3
.cargo/: config.toml
assets/: index.html  script.js
scripts/: convert_png.py  convert_png_to_raw.py  convert_svg_dir.py  generate_host_key  invert_colors_dir.py  png_info.py  release.sh  table.sh
src/: main.rs  state.rs
src/applications/: app2.rs  app3.rs  duck_tv.rs  duckcloud.rs  house.rs  media_player.rs  mod.rs  settings.rs  tinyweather.rs
src/applications/qwackify/: qwackify.rs
src/base/: api.rs  assets.rs  keyboard.rs  macros.rs  mod.rs  rng.rs  shell.rs  ssh.rs  timer.rs  uptime.rs  wifi.rs  wireguard.rs
src/base/routes/: index.rs  mod.rs  ota.rs
src/base/routes/api/: list.rs  mod.rs  sensor.rs  shell.rs
src/base/routes/api/download/: file.rs  mod.rs
src/base/routes/api/media/: gallery.rs  heart.rs  mod.rs  next.rs  play_pause.rs  prev.rs
src/base/routes/api/media/playlist/: append.rs  clear.rs  fav.rs  mod.rs  remove.rs
src/base/routes/api/media/search/: mod.rs
src/base/routes/api/media/search/song/: fuzzy_song.rs  mod.rs
src/base/routes/api/media/search/songs/: fuzzy_songs.rs  mod.rs
src/base/routes/api/settings/: mod.rs
src/base/routes/api/settings/api/: mod.rs  off.rs
src/base/routes/api/settings/cpu/: mod.rs  set.rs
src/base/routes/api/settings/display/: brightness.rs  call.rs  mod.rs  page.rs  redraw.rs  state.rs  text.rs
src/base/routes/api/settings/mic/: mod.rs  mute.rs  volume.rs
src/base/routes/api/settings/power/: low.rs  mod.rs
src/base/routes/api/settings/sleep/: mod.rs  now.rs  reset.rs
src/base/routes/api/settings/speaker/: amp.rs  ding.rs  mod.rs  mute.rs  stream.rs  toggle.rs  volume.rs
src/base/routes/api/settings/ssh/: mod.rs  state.rs
src/base/routes/api/settings/voice/: intercom.rs  mod.rs  state.rs  wakeword.rs
src/base/routes/api/settings/vpn/: mod.rs  state.rs
src/base/routes/api/settings/wifi/: mod.rs  off.rs  scan.rs
src/base/routes/api/upload/: file.rs  mod.rs
src/base/routes/api/weather/: mod.rs  update.rs
src/components/: CpuClock.rs  axp2101.rs  buttons.rs  co5300.rs  framebuffer.rs  frequency.rs  ft3168.rs  mod.rs  pcf85063a.rs  qmi8658.rs  qspi_bus.rs  storage.rs
src/crates/: README.md
src/crates/buzzkiller/: Cargo.toml  build.rs
src/crates/buzzkiller/src/: lib.rs
src/crates/embedded-keyboard/: Cargo.toml
src/crates/embedded-keyboard/src/: lib.rs
src/crates/embedded-png/: .gitignore  Cargo.toml
src/crates/embedded-png/src/: lib.rs
src/crates/es7210/: Cargo.toml  README.md
src/crates/es7210/src/: lib.rs
src/crates/es8311/: README.md
src/crates/es8311/src/: lib.rs
src/crates/tinytunnel/src/: lib.rs
src/gui/: animations.rs  apps.rs  battery.rs  call.rs  colors.rs  control_center.rs  duck_tv.rs  duckcloud.rs  gallery.rs  homescreen.rs  house.rs  input.rs  media_player.rs  mod.rs  pages.rs  rolex.rs  settings.rs  text.rs  time.rs  weather.rs
src/gui/options/: amplifier.rs  api.rs  bluetooth.rs  cpu.rs  display.rs  info.rs  mic.rs  mod.rs  rssi.rs  sleep.rs  speaker.rs  ssh.rs  streaming.rs  timeout.rs  vpn.rs  wakeword.rs  wifi.rs
www/: index.html
