[package]
name = "embedded-png"
version = "0.1.0"
edition = "2021"
description = "Simplifies the process of drawing PNG images on embedded devices in a `no_std` environment using `embedded-graphics`"
authors = ["QuackHack-McBlindy"]
license = "MIT"
repository = "https://github.com/QuackHack-McBlindy/embedded-png"
readme = "README.md"
keywords = ["no-std", "embedded-graphics", "png", "esp32", "embedded"]
categories = ["embedded", "no-std", "development-tools::embedded"]

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
embedded-graphics = "0.8.2"
minipng = "1"
defmt = { version = "0.3", optional = true }

[lib]
crate-type = ["lib"]
